objects/copado__Project__c.object
<CustomObject>
    <description>Overall object for capturing the project details.</description>
    <fields>
        <fullName>Go_Live_date__c</fullName>
        <label>Go Live date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_Tabs_from_Promotion_Page__c</fullName>
        <label>Exclude Tabs from Promotion Page</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Static Code Analysis Summary</fullName>
                </value>
                <value>
                    <fullName>Selenium Test</fullName>
                </value>
                <value>
                    <fullName>Promotion User Story Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Index_Metadata__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When this field is checked, Copado will index the metadata selected against the user stories into the User Story Metadata custom object. Indexed metadata can be used for reporting and compliance, and it&apos;s also used by Copado overlap awareness feature.</inlineHelpText>
        <label>Index Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>APO_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Deployment_Flow__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>copado__Index_Metadata__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>APO -</value>
        </filters>
        <label>APO Projects</label>
        <sharedTo>
            <group>APO_Release_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_IT_Ops_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__Project__c.IT_Operations</value>
        </filters>
        <label>All IT Ops Projects</label>
        <sharedTo>
            <role>Director_IT_Ops</role>
            <role>IT_Ops_Team_Member</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dev_QA_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Deployment_Flow__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>Draft,Planned,In progress</value>
        </filters>
        <label>Dev/QA Open Projects</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Start_Date__c</columns>
        <columns>copado__End_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Deployment_Flow__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>Planned,In progress</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Copado_Work_Management_Project</fullName>
        <active>true</active>
        <label>Non-Development Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Project Record Type based on Master</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Operations</fullName>
        <active>true</active>
        <description>Projects Exclusive to IT Operations</description>
        <label>IT Operations</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>